# ha_enocoo

./: .devcontainer.json  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  README_EXAMPLE.md  hacs.json  noxfile.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  test.yml  validate.yml
config/: configuration.yaml
custom_components/ha_enocoo/: __init__.py  _pv_metrics.py  _statistics.py  _util.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json  sensor.py  switch.py
custom_components/ha_enocoo/sensor/: __init__.py  consumption.py  meter.py  quarter.py  traffic_light.py
custom_components/ha_enocoo/translations/: de.json  en.json
custom_components/integration_blueprint/: __init__.py  manifest.json
scripts/: develop  setup
tests/: conftest.py  test_coordinator.py  test_metadata.py  test_statistics.py  test_utils.py
