[project]
name = "ha_enocoo"
version = "0.7.2"
description = "Custom Home Assistant integration for enocoo"
authors = [{ name = "Simon Leiner", email = "simon@leiner.me" }]
requires-python = ">=3.13.2"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "async-lru>=2.0.4",
    "oocone==0.6.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "homeassistant==2025.5.2",
    "mypy>=1.15.0",
    "nox>=2025.5.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.10",
]

[tool.pdm.build]
package-dir = "custom_components"

[tool.mypy]
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--ignore=.nox --ignore=.venv"
