[project]
name = "ha_enocoo"
version = "0.7.3"
description = "Custom Home Assistant integration for enocoo"
authors = [{ name = "Simon Leiner", email = "simon@leiner.me" }]
requires-python = ">=3.13.2"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["async-lru>=2.0.5", "oocone==0.6.5"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "homeassistant==2025.12.0",
    "mypy>=1.18.2",
    "nox>=2025.11.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]

[tool.pdm.build]
package-dir = "custom_components"

[tool.mypy]
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--ignore=.nox --ignore=.venv"
filterwarnings = ["ignore:::homeassistant", "ignore:::litellm"]
